--- a/tasks/templates/shared_file_list.html
+++ b/tasks/templates/shared_file_list.html
@@ -6,11 +6,78 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static '/js/filelist.js' %}"></script>
     <div class="col-12 p-2" id="share-to-me">
+        <div class="row justify-content-between">
+        <div class="col-3">
         <h1>Shared files:</h1>
+        </div>
+        <div class="col-3 ">
+            {% if paginator.num_pages > 1 %}
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        <li class="page-item {% if not current_page.has_previous %}disabled{% endif %}">
+                            <a class="page-link" aria-label="Previous"
+                               {% if current_page.has_previous %}href="?page={{ current_page.previous_page_number }}"
+                               {% else %}href="#"{% endif %}>
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        {% if paginator.num_pages <= 5 %}
+                            {% for page_num in paginator.page_range %}
+                                <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                </li>
+                            {% endfor %}
+                        {% else %}
+                            {% if current_page.number == 1 %}
+                                {% for page_num in paginator.page_range %}
+                                    {% if page_num < 5 %}
+                                        <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                        </li>
+                                    {% endif %}
+                                {% endfor %}
+                                <li class="page-item disabled"><a class="page-link">...</a></li>
+                            {% elif current_page.number >= last_three_page %}
+                                <li class="page-item disabled"><a class="page-link">...</a></li>
+                                {% for page_num in paginator.page_range %}
+                                    {% if page_num > last_few_pages %}
+                                        <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                        </li>
+                                    {% endif %}
+                                {% endfor %}
+                            {% else %}
+                                <li class="page-item">
+                                    <a class="page-link"
+                                       href="?page={{ current_page.previous_page_number }}">{{ current_page.previous_page_number }}</a>
+                                </li>
+                                {% for page_num in paginator.page_range %}
+                                    {% if page_num >= current_page.number and page_num < next_few_page %}
+                                        <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                        </li>
+                                    {% endif %}
+                                {% endfor %}
+                                <li class="page-item disabled"><a class="page-link">...</a></li>
+                            {% endif %}
+                        {% endif %}
+
+                        <li class="page-item {% if not current_page.has_next %}disabled{% endif %}">
+                            <a class="page-link" aria-label="Next"
+                               {% if current_page.has_next %}href="?page={{ current_page.next_page_number }}"
+                               {% else %}href="#"{% endif %}>
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            {% endif %}
+        </div>
+        </div>
         {% if shared_files.count > 0 %}
             <div class="list-group" id="fileList">
                 {% for file in shared_files %}
-                    <div class="flex-md-row list-item" aria-current="true">
+                    <div class="flex-column flex-md-row list-item" aria-current="true">
                         <div class="text-list-item p-3 gap-2 w-100">
                             <form method="post" action="{% url 'pdf_viewer' %}" class="d-inline"
                                   target="_blank" id="viewerForm{{ file.shared_file.id }}">
