--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -58,11 +58,46 @@
                                         <span aria-hidden="true">&laquo;</span>
                                     </a>
                                 </li>
-                                {% for page_num in paginator.page_range %}
-                                    <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
-                                        <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-                                    </li>
-                                {% endfor %}
+                                {% if paginator.num_pages <= 5 %}
+                                    {% for page_num in paginator.page_range %}
+                                        <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                        </li>
+                                    {% endfor %}
+                                {% else %}
+                                    {% if current_page.number == 1 %}
+                                        {% for page_num in paginator.page_range %}
+                                            {% if page_num < 5 %}
+                                                <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                                </li>
+                                            {% endif %}
+                                        {% endfor %}
+                                        <li class="page-item disabled"><a class="page-link">...</a></li>
+                                    {% elif current_page.number >= last_three_page %}
+                                        <li class="page-item disabled"><a class="page-link">...</a></li>
+                                        {% for page_num in paginator.page_range %}
+                                            {% if page_num > last_few_pages %}
+                                                <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                                </li>
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% else %}
+                                        <li class="page-item">
+                                            <a class="page-link"
+                                               href="?page={{ current_page.previous_page_number }}">{{ current_page.previous_page_number }}</a>
+                                        </li>
+                                        {% for page_num in paginator.page_range %}
+                                            {% if page_num >= current_page.number and page_num < next_few_page %}
+                                                <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                                </li>
+                                            {% endif %}
+                                        {% endfor %}
+                                        <li class="page-item disabled"><a class="page-link">...</a></li>
+                                    {% endif %}
+                                {% endif %}
                                 <li class="page-item {% if not current_page.has_next %}disabled{% endif %}">
                                     <a class="page-link" aria-label="Next"
                                        {% if current_page.has_next %}href="?page={{ current_page.next_page_number }}"
