--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -43,7 +43,7 @@
                     <div class="button-bar">
                         <button type="button" id="viewSelected" class="btn btn-primary"><i class="bi bi-play-btn"></i></button>
                         <button type="button" class="btn btn-secondary" id="downloadSelected"><i class="bi bi-download"></i></button>
-                        <button type="button" class="btn btn-danger"><i class="bi bi-trash"></i></button>
+                        <button type="button" class="btn btn-danger" id="deleteSelected"><i class="bi bi-trash"></i></button>
                     </div>
                 </div>
                 <div class="col-md-4"></div>
