change dark mode color theme

--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -121,7 +121,7 @@
 
 
             <div class="text-center">
-                <div class="row">
+                <div class="row list-table">
                     <div class="table-responsive">
                         <table class="table table-light table-bordered" id="dataTable">
                             <thead class="table-secondary">
