--- a/tasks/templates/list_team.html
+++ b/tasks/templates/list_team.html
@@ -26,7 +26,7 @@
                     {% csrf_token %}
                     {% include 'partials/create_team_form.html' with form=create_form %}
                     <input type="submit" class="team-text btn btn-primary mt-3d-block w-50"
-                           style="height: 40px; border-radius: 70px;background: #0d6efd;"
+                           style="height: 40px; border-radius: 70px;margin-top:25px;"
                            value="Create" name="create_group">
                 </form>
             </div>
@@ -39,7 +39,7 @@
                     {% csrf_token %}
                     {% include 'partials/create_team_form.html' with form=join_form %}
                     <input type="submit" class="team-text btn btn-primary mt-3d-block w-50"
-                           style="height: 40px; border-radius: 70px;background: #0d6efd;"
+                           style="height: 40px; border-radius: 70px; margin-top:25px;"
                            value="Join" name="join_group">
                 </form>
             </div>
