--- a/tasks/templates/password.html
+++ b/tasks/templates/password.html
@@ -4,7 +4,7 @@
     {% load widget_tweaks %}
     <link href="{% static 'css/password_and_profile.css' %}" rel="stylesheet">
     <div class="mainContainer">
-        <div class="formContainer">
+        <div class="formContainer" id="new-info">
             <form action="{% url 'password' %}" method="post">
                 {% csrf_token %}
                 <hggroup class="text-start">
