--- a/tasks/templates/profile.html
+++ b/tasks/templates/profile.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="mainContainer">
-        <div class="formContainer">
+        <div class="formContainer" id="new-info">
             <form action="{% url 'profile' %}" method="post">
                 {% csrf_token %}
 
