--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -58,7 +58,7 @@
                                 {% csrf_token %}
                                 {% include 'partials/create_team_form.html' with form=form %}
                                 <input type="submit" class="btn btn-primary team-text mt-3d-block w-50"
-                                       style="height: 40px; border-radius: 70px;margin-top: 40px;background: #0d6efd;"
+                                       style="height: 40px; border-radius: 70px;margin-top: 30px;"
                                        value="Invite">
                             </form>
                         </div>
