--- a/tasks/templates/partials/unshare_file.html
+++ b/tasks/templates/partials/unshare_file.html
@@ -15,7 +15,7 @@
                   <div class="col text-center mt-2">
                   <form action="{% url 'unshare_file' upload.id user.id %}" method="post" class="d-inline">
                       {% csrf_token %}
-                      <button type="submit" class="btn btn-primary"> Unshare</button>
+                      <button type="submit" class="btn btn-primary unshare-btn"> Unshare</button>
                   </form>
                   </div>
               </div>
@@ -25,7 +25,7 @@
           {% endif %}
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary rename-close-btn" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
