--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -272,15 +272,87 @@ table#dataTable {
 
 #start-footer {
     position: absolute;
-    bottom: 150px;
+    bottom: 400px;
 }
 
+/*#start-footer .start-btn{*/
+/*    color:#FFFFFF;*/
+/*    background-color:#29D685;*/
+/*    border-color: #29D685;*/
+/*    border-radius: 10px;*/
+/*}*/
+
 #start-footer .start-btn{
-    color:#FFFFFF;
-    background-color:#29D685;
-    border-color: #29D685;
-    border-radius: 10px;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  padding-block: 0.5rem;
+  padding-inline: 1.25rem;
+  background-color: rgb(0 107 179);
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  color: #ffff;
+  gap: 10px;
+  font-weight: bold;
+  border: 3px solid #ffffff4d;
+  outline: none;
+  overflow: hidden;
+  font-size: 25px;
+  width: 500px;
 }
+.icon {
+  width: 24px;
+  height: 24px;
+  transition: all 0.3s ease-in-out;
+}
+
+.start-btn:hover {
+  transform: scale(1.05);
+  border-color: #fff9;
+}
+
+.start-btn:hover .icon {
+  transform: translate(4px);
+}
+
+.start-btn:hover::before {
+  animation: shine 1.5s ease-out infinite;
+}
+
+.start-btn::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 100%;
+  background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 30%,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0) 70%
+  );
+  top: 0;
+  left: -100px;
+  opacity: 0.6;
+}
+
+@keyframes shine {
+  0% {
+    left: -100px;
+  }
+
+  60% {
+    left: 100%;
+  }
+
+  to {
+    left: 100%;
+  }
+}
+
+
 
 #page-col{
     margin-right: auto;
