--- a/tasks/templates/shared_file_list.html
+++ b/tasks/templates/shared_file_list.html
@@ -7,72 +7,77 @@
     <script src="{% static '/js/filelist.js' %}"></script>
     <div class="col-12 p-2" id="share-to-me">
         <div class="row justify-content-between">
-        <div class="col-3">
-        <h1>Shared files:</h1>
-        </div>
-        <div class="col-3 ">
-            {% if paginator.num_pages > 1 %}
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                        <li class="page-item {% if not current_page.has_previous %}disabled{% endif %}">
-                            <a class="page-link" aria-label="Previous"
-                               {% if current_page.has_previous %}href="?page={{ current_page.previous_page_number }}"
-                               {% else %}href="#"{% endif %}>
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                        {% if paginator.num_pages <= 5 %}
-                            {% for page_num in paginator.page_range %}
-                                <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
-                                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-                                </li>
-                            {% endfor %}
-                        {% else %}
-                            {% if current_page.number == 1 %}
+            <div class="col-3">
+                <h1>Shared files:</h1>
+            </div>
+            <div class="col-3 ">
+                {% if paginator.num_pages > 1 %}
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li class="page-item {% if not current_page.has_previous %}disabled{% endif %}">
+                                <a class="page-link" aria-label="Previous"
+                                   {% if current_page.has_previous %}href="?page={{ current_page.previous_page_number }}"
+                                   {% else %}href="#"{% endif %}>
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            {% if paginator.num_pages <= 5 %}
+                                <!--If total pages are less than or equal to 5, then make all page items (1,2,3,4,5)-->
                                 {% for page_num in paginator.page_range %}
-                                    {% if page_num < 5 %}
-                                        <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
-                                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-                                        </li>
-                                    {% endif %}
-                                {% endfor %}
-                                <li class="page-item disabled"><a class="page-link">...</a></li>
-                            {% elif current_page.number >= last_three_page %}
-                                <li class="page-item disabled"><a class="page-link">...</a></li>
-                                {% for page_num in paginator.page_range %}
-                                    {% if page_num > last_few_pages %}
-                                        <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
-                                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-                                        </li>
-                                    {% endif %}
+                                    <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                        <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                    </li>
                                 {% endfor %}
                             {% else %}
-                                <li class="page-item">
-                                    <a class="page-link"
-                                       href="?page={{ current_page.previous_page_number }}">{{ current_page.previous_page_number }}</a>
-                                </li>
-                                {% for page_num in paginator.page_range %}
-                                    {% if page_num >= current_page.number and page_num < next_few_page %}
-                                        <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
-                                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-                                        </li>
-                                    {% endif %}
-                                {% endfor %}
-                                <li class="page-item disabled"><a class="page-link">...</a></li>
+                                <!--If total pages are greater than 5, then make some of the page items-->
+                                {% if current_page.number == 1 %}
+                                    <!--If in first page, make first 4 items and omit the rest(1,2,3,4,...)-->
+                                    {% for page_num in paginator.page_range %}
+                                        {% if page_num < 5 %}
+                                            <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                                <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                    <li class="page-item disabled"><a class="page-link">...</a></li>
+                                {% elif current_page.number >= last_three_page %}
+                                    <!--If in a page that greater than or equal the last three page, make last 4 items and omit the rest(...,l4,l3,l2,l1)-->
+                                    <li class="page-item disabled"><a class="page-link">...</a></li>
+                                    {% for page_num in paginator.page_range %}
+                                        {% if page_num > last_few_pages %}
+                                            <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                                <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% else %}
+                                    <!--For other cases, only make the current, last one and next two (l,c,n1,n2,...), omit the rest-->
+                                    <li class="page-item">
+                                        <a class="page-link"
+                                           href="?page={{ current_page.previous_page_number }}">{{ current_page.previous_page_number }}</a>
+                                    </li>
+                                    {% for page_num in paginator.page_range %}
+                                        {% if page_num >= current_page.number and page_num < next_few_page %}
+                                            <li class="{% if page_num == current_page.number %}active{% endif %} page-item">
+                                                <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                    <li class="page-item disabled"><a class="page-link">...</a></li>
+                                {% endif %}
                             {% endif %}
-                        {% endif %}
 
-                        <li class="page-item {% if not current_page.has_next %}disabled{% endif %}">
-                            <a class="page-link" aria-label="Next"
-                               {% if current_page.has_next %}href="?page={{ current_page.next_page_number }}"
-                               {% else %}href="#"{% endif %}>
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            {% endif %}
-        </div>
+                            <li class="page-item {% if not current_page.has_next %}disabled{% endif %}">
+                                <a class="page-link" aria-label="Next"
+                                   {% if current_page.has_next %}href="?page={{ current_page.next_page_number }}"
+                                   {% else %}href="#"{% endif %}>
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                {% endif %}
+            </div>
         </div>
         {% if shared_files.count > 0 %}
             <div class="list-group" id="fileList">
