--- a/tasks/templates/list_team.html
+++ b/tasks/templates/list_team.html
@@ -1,6 +1,7 @@
 {% extends 'base_content_without_message.html' %}
 {% block content %}
 {% load static %}
+    <link rel="stylesheet" href="{% static 'css/team_view.css' %}">
     <div class="col-12 p-2">
          {% include 'partials/messages.html' %}
         <div class="row">
