fix the preference bug

--- a/tasks/templates/preferences.html
+++ b/tasks/templates/preferences.html
@@ -1,13 +1,7 @@
-{% extends 'base_content.html' %}
+{% extends 'base_content_without_message.html' %}
 {% load static %}
 {% block content %}
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <!-- Other meta tags, title, etc. -->
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-        <link href="{% static 'custom.css' %}" rel="stylesheet">
-    </head>
+<link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <body class="{{ selected_theme }}">
     <div class="container ">
         <h1>Preferences</h1>
@@ -25,5 +19,4 @@
     </div>
     <script src="{% static 'js/themes.js' %}"></script>
     </body>
-    </html>
 {% endblock %}
