--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -47,9 +47,15 @@
             <div class="toolbar-container row justify-content-end">
                 <div class="col-md-3">
                     <div class="button-bar">
-                        <button type="button" id="viewSelected" class="btn btn-primary"><i class="bi bi-play-btn"></i></button>
-                        <button type="button" class="btn btn-secondary" id="downloadSelected"><i class="bi bi-download"></i></button>
-                        <button type="button" class="btn btn-danger" id="deleteSelected"><i class="bi bi-trash"></i></button>
+                        <button type="button" id="viewSelected" class="btn" style="border: 2px solid #04AA6D;  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" id="explore"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-5.5-2.5l7.51-3.49L17.5 6.5 9.99 9.99 6.5 17.5zm5.5-6.6c.61 0 1.1.49 1.1 1.1s-.49 1.1-1.1 1.1-1.1-.49-1.1-1.1.49-1.1 1.1-1.1z"></path></svg>
+                        </button>
+                        <button type="button" class="btn" id="downloadSelected" style="border: 2px solid #0dcaf0; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" id="download"><path d="M12,16a1,1,0,0,1-.71-.29l-4-4a1,1,0,0,1,1.41-1.41L12,13.59l3.29-3.29a1,1,0,0,1,1.41,1.41l-4,4A1,1,0,0,1,12,16Z"></path><path d="M12 16a1 1 0 0 1-1-1V5a1 1 0 0 1 2 0V15A1 1 0 0 1 12 16zM19 20H5a1 1 0 0 1 0-2H19a1 1 0 0 1 0 2z"></path></svg>
+                        </button>
+                        <button type="button" class="btn" id="deleteSelected" style="border: 2px solid #ca402b; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);">
+                            <i class="bi bi-trash" style="width: 30px; height: 30px"></i>
+                        </button>
                     </div>
                 </div>
                 <div class="col-md-4"></div>
