--- a/tasks/templates/partials/menu.html
+++ b/tasks/templates/partials/menu.html
@@ -1,9 +1,12 @@
 {%load static%}
 {%if user.is_authenticated%}
 {% load notification_tags %}
+{% load static %}
 {% get_unread_notifications user as notifications %}
 {%endif%}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<link rel="stylesheet" type="text/css" href="{% static '/css/menu.css' %}">
+
 <div class=" collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-3">
 
@@ -26,10 +29,10 @@
       <a class="nav-link" href="#" id="user-account-dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           {% if user.avatar_url == settings.DEFAULT_IMAGE_URL %}
             <img src="{{ user.avatar_url }}" alt="Profile image of {{ user.username }}"
-             class="rounded-circle small-image mb-1 invert_image">
+             class="rounded-circle invert_image auto-size-image">
           {% else %}
             <img src="{{ user.avatar_url }}" alt="Profile image of {{ user.username }}"
-             class="rounded-circle small-image mb-1">
+             class="rounded-circle auto-size-image">
           {% endif %}
       </a>
       <ul class="dropdown-custom-theme dropdown-menu dropdown-menu-end" aria-labelledby="user-account-dropdown">
