--- a/tasks/templates/partials/navbar.html
+++ b/tasks/templates/partials/navbar.html
@@ -4,9 +4,11 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand navbar-brand-left" href="{% url 'home' %}">
-      Crimson PDF
-    </a>
+    <div class="navbar-brand-left" style="margin-right: auto">
+        <a class="navbar-brand" href="{% url 'home' %}">
+            Crimson PDF
+        </a>
+    </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
