--- a/tasks/templates/partials/sidebar.html
+++ b/tasks/templates/partials/sidebar.html
@@ -68,7 +68,7 @@
         </li>
     </ul>
     <div class="avatar-name">
-        <img src="{{ user.avatar_url }}" alt="{{ user.username }}'s avatar" class="sidebar-img rounded" style="width: 40px; height: 40px; border-radius: 30px">
+        <img src="{{ user.avatar_url }}" alt="{{ user.username }}'s avatar" class="sidebar-img">
         <h5>{{ user.username }}</h5>
     </div>
 </div>
