--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -20,14 +20,16 @@
                 <h4 class="noto-sans intro-header">Upload Your First PDF File to Get Start</h4>
             </div>
             <div id="start-footer">
-{#                <button type="button" class="btn start-btn" onclick="window.location='{% url 'upload_file' %}'">#}
-{#                    Start Upload#}
-{#                </button>#}
+                {#                <button type="button" class="btn start-btn" onclick="window.location='{% url 'upload_file' %}'">#}
+                {#                    Start Upload#}
+                {#                </button>#}
                 <button class="btn start-btn" type="button" onclick="window.location='{% url 'upload_file' %}'">
-                  Get Start
-                  <svg fill="currentColor" viewBox="0 0 24 24" class="icon">
-                    <path clip-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z" fill-rule="evenodd"></path>
-                  </svg>
+                    Get Start
+                    <svg fill="currentColor" viewBox="0 0 24 24" class="icon">
+                        <path clip-rule="evenodd"
+                              d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z"
+                              fill-rule="evenodd"></path>
+                    </svg>
                 </button>
             </div>
         </div>
@@ -47,14 +49,29 @@
             <div class="toolbar-container row justify-content-end">
                 <div class="col-md-3">
                     <div class="button-bar">
-                        <button type="button" id="viewSelected" class="btn" style="border: 2px solid #04AA6D;  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" id="explore"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-5.5-2.5l7.51-3.49L17.5 6.5 9.99 9.99 6.5 17.5zm5.5-6.6c.61 0 1.1.49 1.1 1.1s-.49 1.1-1.1 1.1-1.1-.49-1.1-1.1.49-1.1 1.1-1.1z"></path></svg>
+                        <button type="button" id="viewSelected" class="btn"
+                                style="border: 2px solid #04AA6D;  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"
+                                 id="explore">
+                                <path fill="none" d="M0 0h24v24H0V0z"></path>
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-5.5-2.5l7.51-3.49L17.5 6.5 9.99 9.99 6.5 17.5zm5.5-6.6c.61 0 1.1.49 1.1 1.1s-.49 1.1-1.1 1.1-1.1-.49-1.1-1.1.49-1.1 1.1-1.1z"></path>
+                            </svg>
                         </button>
-                        <button type="button" class="btn" id="downloadSelected" style="border: 2px solid #0dcaf0; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" id="download"><path d="M12,16a1,1,0,0,1-.71-.29l-4-4a1,1,0,0,1,1.41-1.41L12,13.59l3.29-3.29a1,1,0,0,1,1.41,1.41l-4,4A1,1,0,0,1,12,16Z"></path><path d="M12 16a1 1 0 0 1-1-1V5a1 1 0 0 1 2 0V15A1 1 0 0 1 12 16zM19 20H5a1 1 0 0 1 0-2H19a1 1 0 0 1 0 2z"></path></svg>
+                        <button type="button" class="btn" id="downloadSelected"
+                                style="border: 2px solid #0dcaf0; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"
+                                 id="download">
+                                <path d="M12,16a1,1,0,0,1-.71-.29l-4-4a1,1,0,0,1,1.41-1.41L12,13.59l3.29-3.29a1,1,0,0,1,1.41,1.41l-4,4A1,1,0,0,1,12,16Z"></path>
+                                <path d="M12 16a1 1 0 0 1-1-1V5a1 1 0 0 1 2 0V15A1 1 0 0 1 12 16zM19 20H5a1 1 0 0 1 0-2H19a1 1 0 0 1 0 2z"></path>
+                            </svg>
                         </button>
-                        <button type="button" class="btn" id="deleteSelected" style="border: 2px solid #ca402b; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);">
-                            <i class="bi bi-trash" style="width: 30px; height: 30px"></i>
+                        <button type="button" class="btn" id="deleteSelected"
+                                style="border: 2px solid #ca402b; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                                 class="bi bi-trash" viewBox="0 0 16 16">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                                <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                            </svg>
                         </button>
                     </div>
                 </div>
@@ -228,7 +245,8 @@
                                         <td>-</td>
                                     {% endif %}
                                     <td>{{ upload.file_size_mb }} Mb</td>
-                                    <form method="post" action="{% url 'pdf_viewer' %}" class="d-inline" target="_blank" id="viewerForm{{ upload.id }}" style="display: none">
+                                    <form method="post" action="{% url 'pdf_viewer' %}" class="d-inline" target="_blank"
+                                          id="viewerForm{{ upload.id }}" style="display: none">
                                         {% csrf_token %}
                                         <input type="hidden" name="upload_id" value="{{ upload.id }}">
                                         <a href="#" class="a"
