hide the main page scrollbar

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -954,3 +954,7 @@ Pink mode
 .min-h-screen {
     min-height: 91vh !important;
 }
+
+body{
+    overflow: hidden; /* hide the main page scrollbar*/
+}
